--- a/EX1_1_base.html
+++ b/EX1_1_base.html
@@ -69,7 +69,7 @@
         gl.compileShader(vertShader);
 
 
-        // todo : redifine geometry color
+        // todo : redefine geometry color
         // vertex shader code
         var fragCode = 
         'void main(void) {' + 
@@ -117,7 +117,7 @@
         //Bind index buffer object
         gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, index_buffer);
 
-        // todo: redifine dlear color
+        // todo: redefine dlear color
         // define the clear color
         gl.clearColor(0.0,0.0,0.0,1);
 
